# scrumy-bdd

./: .cproject  .gitignore  .project  .pydevproject  .travis.yml  Makefile.am  README.md  Vagrantfile  configure.ac  configure.py  deps.pp  deps.py  install-gocd-agent-yum.bash  install-gocd-server-apt.bash  install-gocd-server-yum.bash  setup-product.pp  setup-product.ppmod  travis-env.bash
.externalToolBuilders/: rake test.launch
components/puppet/: Makefile  Makefile.am  Puppetfile.in  gen-Puppetfile.py  install.py  notes.txt  puppetcfg.py  setup.pp  setup.py
components/puppet/extdata/: common.csv  scrumy-bdd.csv
components/puppet/manifests/: nodes.pp  sbdd-site.pp  site.pp
components/puppet/modules/: .fixtures.yml
components/puppet/modules/gitolite/: .fixtures.yml
components/puppet/modules/gitolite/files/: jenkins.post-receive.py  post-receive.py
components/puppet/modules/gitolite/manifests/: init.pp  rc.pp  user.pp
components/puppet/modules/gitolite/spec/classes/: gitolite_init_spec.rb
components/puppet/modules/gitolite/spec/defines/: gitolite_rc_spec.rb  gitolite_user_spec.rb
components/puppet/modules/gitolite/templates/: gitolite.rc.erb  gitolite.repo.conf.erb  jenkins.gitolite.rc.erb
components/puppet/modules/profile/: .fixtures.yml  Rakefile
components/puppet/modules/profile/files/: nginx.conf  trac_fcgi.py
components/puppet/modules/profile/manifests/: bkup_server.pp  bugzilla.pp  devel.pp  devel_puppet.pp  devel_server.pp  devel_workstation.pp  init.pp  jenkins.pp  jenkins_plugin.pp  postgresql.pp  trac.pp  virt_domain.pp  www.pp  www_nginx.pp
components/puppet/modules/profile/spec/classes/: profile_bkup_server.rb  profile_bkup_server_spec.rb  profile_bugzilla_spec.rb  profile_devel_server_spec.rb  profile_devel_spec.rb  profile_devel_workstation_spec.rb  profile_init_spec.rb  profile_jenkins_spec.rb  profile_postgresql_spec.rb  profile_trac_spec.rb  profile_virt_host_spec.rb  profile_www_nginx_spec.rb  profile_www_spec.rb
components/puppet/modules/profile/spec/defines/: profile_jenkins_plugin_rspec.rb  profile_virt_domain_spec.rb
components/puppet/modules/profile/spec/fixtures/extdata/: common.csv
components/puppet/modules/profile/spec/fixtures/manifests/: site.pp
components/puppet/modules/profile/templates/: bacula-dir.conf.erb  bacula-fd.conf.erb  bacula-sd.conf.erb  bconsole.conf.erb  domain.virt.centos-6.4-x86_64.xml.erb  logwatch.conf.erb  nginx.conf.erb  nginx_bugzilla_loc.conf.erb  nginx_jenkins_loc.conf.erb  nginx_trac_loc.conf.erb  trac_fcgi.service.erb  tracd.service.erb
components/puppet/modules/scrumy-bdd/: .fixtures.yml
components/puppet/modules/scrumy-bdd/manifests/: init.pp
components/puppet/modules/scrumy-bdd/spec/classes/: scrumy-bdd_init_spec.rb
components/puppet/modules/trac/manifests/: init.pp
components/puppet/modules/vdomain/: .fixtures.yml
components/puppet/modules/vdomain/files/: fedora19_root_rsa  fedora19_root_rsa.pub
components/puppet/modules/vdomain/manifests/: init.pp
components/puppet/modules/vdomain/spec/defines/: vdomain_init_spec.rb
components/puppet/modules/vdomain/templates/: fedora19keys.vdomain.xml.erb  vdomain.known_hosts.erb
cxx/wirde/: verify.hpp
docs/admin/: systemd.notes.txt
docs/implementation/: 00-Concept.rtf  Features.txt  tasks.txt
scripts/: wirde-init.bash
src/tools/: .gitignore  build-github-wiki.py
tests/: Makefile  Makefile.am  Makefile.in
tests/src/: Makefile.am  Makefile.in  TestCfg.py  TestGitoliteJenkinsPostReceiveHook.py  config.py  main.py
tests/src/tools/: SetupVMXenXl.py
tests/sysetem/: Makefile.am  create-clone.bash  vclone-setup.bash
tests/system/: .gitignore  Makefile.am  create-clone.bash  vclone-setup.bash
tests/system/local/: TestSysLocal.py
tests/system/remote/: test-gitolite_spec.rb
tests/virt/: .gitignore  tfedora19keys.root.setup.local.bash  tfedora19keys.root.setup.remote.bash  tfedora19keys.tester.unittest.local.bash  tfedora19keys.tester.unittest.remote.bash
